[package]
name = "lyka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = {version = "0.2"}
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
clap = {version = "4"}
inquire = {version = "0.6"}
indicatif = {version = "0.17"}
regex = {version = "1.9.3"}
clipboard = { version = "0.5.0"}
human-panic = "1.1.5"