[package]
name = "lyka"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["pastebin", "cli", "rust", "code"]
readme = "README.md"
authors = ["Ishan Joshi <noobscience@duck.com>"]
description = "The Pastebin CLI brought to you by Lyka"
repository = "https://github.com/newtoallofthis123/lyka_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = {version = "0.2"}
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
clap = {version = "4", features = ["derive"]}
inquire = {version = "0.6", default-features = false, features=["crossterm", "date", "editor"]}
indicatif = {version = "0.17"}
clipboard = { version = "0.5.0"}
human-panic = "1.1.5"